Security-and-Policies/m3-hw/curl-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-client
  namespace: projectx
  labels:
    app: curl-client
    role: client
spec:
  containers:
  - name: curl
    image: curlimages/curl:latest
    command: ["sleep", "3600"]
    resources:
      requests:
        cpu: "100m"
        memory: "128Mi"
      limits:
        cpu: "200m"
        memory: "256Mi"
