Security-and-Policies/m3-hw/producer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-deploy
  namespace: projectx
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: fun-facts
      role: producer
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: fun-facts
        role: producer
    spec:
      containers:
      - name: prod-container
        image: shekeriev/k8s-producer:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
