Security-and-Policies/m3-hw/consumer-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: consumer-netpol
  namespace: projectx
spec:
  podSelector:
    matchLabels:
      role: consumer
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: client
    ports:
    - protocol: TCP
      port: 5000
