Security-and-Policies/m3-hw/producer-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: producer-netpol
  namespace: projectx
spec:
  podSelector:
    matchLabels:
      role: producer
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: consumer
    ports:
    - protocol: TCP
      port: 5000
